# SISL

./: CMakeLists.txt  LICENSE  README.md  SISL.sln  SISL.vcxproj  SISL.vcxproj.filters  Sisl.hpp  main.cpp  sisl.hpp  sisl_internal.hpp
.github/workflows/: cpp-ci.yml
Intel® VTune™ Profiler Results/SISL/: SISL.vtuneproj
TESTS/: tests_sisl.cpp
enc_temp_folder/fef5ef1e29a7cbad1af8243b5f7a09e/: sisl.hpp
headers/: CallStrategies.hpp  Delegate.hpp  Generic_Delegate.hpp  Object.hpp  Signal.hpp  SislObject.hpp  SlotsManager.hpp  Utils.h
templates/: Delegate.tpp  Generic_Delegate.tpp  Signal.tpp  SlotsManager.tpp
